fix(toast): toast is now correctly excluded from focus trapping

--- a/core/src/utils/test/overlays/index.html
+++ b/core/src/utils/test/overlays/index.html
@@ -10,8 +10,9 @@
   <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
   <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
   <script type="module">
-    import { modalController, createAnimation } from '../../../../../dist/ionic/index.esm.js';
+    import { modalController, toastController, createAnimation } from '../../../../../dist/ionic/index.esm.js';
     window.modalController = modalController;
+    window.toastController = toastController;
   </script>
 </head>
 
@@ -30,11 +31,17 @@
       </ion-header>
 
       <ion-content class="ion-padding">
+        <ion-item>
+          <ion-label>Text Input</ion-label>
+          <ion-input id="root-input"></ion-input>
+        </ion-item>
+
         <ion-button id="create" onclick="createModal()">Create a Modal</ion-button>
         <ion-button id="create-nested" onclick="createNestedOverlayModal()">Create Nested Overlay Modal</ion-button>
         <ion-button id="present" onclick="presentHiddenModal()">Present a Hidden Modal</ion-button>
         <ion-button id="create-and-present" onclick="createAndPresentModal()">Create and Present a Modal</ion-button>
         <ion-button id="simulate" onclick="backButton()">Simulate Hardware Back Button</ion-button>
+        <ion-button id="create-and-present-toast" onclick="createAndPresentToast()">Create and Present Toast</ion-button>
       </ion-content>
     </div>
   </ion-app>
@@ -51,8 +58,14 @@
           <ion-content class="ion-padding">
             Modal Content
 
+            <ion-item>
+              <ion-label>Text Input</ion-label>
+              <ion-input id="modal-input"></ion-input>
+            </ion-item>
+
             <ion-button id="modal-create">Create a Modal</ion-button>
             <ion-button id="modal-simulate">Simulate Hardware Back Button</ion-button>
+            <ion-button id="modal-toast">Present a Toast</ion-button>
 
           </ion-content>
         `;
@@ -65,6 +78,11 @@
       const simulateButton = div.querySelector('ion-button#modal-simulate');
       simulateButton.onclick = () => {
         backButton();
+      }
+
+      const presentToast = div.querySelector('ion-button#modal-toast');
+      presentToast.onclick = () => {
+        createAndPresentToast();
       }
 
       const modal = await modalController.create({
@@ -89,6 +107,14 @@
       if (modal) {
         modal.present();
       }
+    }
+
+    const createAndPresentToast = async () => {
+      const toast = await toastController.create({
+        message: 'This is a toast!'
+      });
+
+      await toast.present();
     }
 
     const createNestedOverlayModal = async () => {
